[refactor] 메뉴 조회 companyId 추가 & MenuListResponseDto 생성